--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
   "dependencies": {
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
-    "lodash": "^4.17.21",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.10",
-    "uuid": "^9.0.0"
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "@svgr/webpack": "^7.0.0",
